# BaseTestEngine

./: .gitignore  Readme.md
Source/: CLAUDE.md  CMakeLists.txt  CMakeSettings.json
Source/.claude/: settings.local.json
Source/.understand-anything/: .understandignore  knowledge-graph.json  meta.json
Source/.understand-anything/tmp/: importmap.json
Source/Algorithm/: CMakeLists.txt
Source/Algorithm/ModulePublic/: Module.h
Source/Algorithm/ModulePublic/Base4/: Sort.cpp  Sort.h
Source/ConsoleMain/: CMakeLists.txt  main.cpp
Source/Core/: CMakeLists.txt  Core.h  CoreModule.h
Source/Core/Base/: Atomic.h  BaseDefines.cpp  BaseDefines.h  GenericPlatform.h  GenericPlatformProcess.cpp  GenericPlatformProcess.h  NumericLimit.h
Source/Core/Common/: LogAssert.cpp  LogAssert.h
Source/Core/Task/: AnyTaskThread.cpp  AnyTaskThread.h  DelegateGraphTask.cpp  DelegateGraphTask.h  FunctionGraphTask.cpp  FunctionGraphTask.h  NamedTaskThread.cpp  NamedTaskThread.h  NullGraphTask.cpp  NullGraphTask.h  ReturnGraphTask.cpp  ReturnGraphTask.h  StallingTaskQueue.h  TaskGraphImplementation.cpp  TaskGraphImplementation.h  TaskGraphInterfaces.cpp  TaskGraphInterfaces.h  TaskThreadBase.cpp  TaskThreadBase.h  TriggerEventGraphTask.cpp  TriggerEventGraphTask.h  WorkerThread.h
Source/Core/Threads/: Event.cpp  Event.h  EventPool.h  Runnable.h  RunnableThread.cpp  RunnableThread.h  ScopeLock.h  ThreadConfig.cpp  ThreadConfig.h  ThreadManager.cpp  ThreadManager.h  TlsAutoCleanup.cpp  TlsAutoCleanup.h
Source/Core/Threads/Win/: WindowsRunnableThread.cpp  WindowsRunnableThread.h  WindowsSyncUtils.cpp  WindowsSyncUtils.h
Source/DirectX12/: CMakeLists.txt
Source/DirectX12/Chapter/: BoxApp.cpp  BoxApp.h  InitDirect3D.cpp  InitDirect3D.h
Source/DirectX12/Common/: D3DApp.cpp  D3DApp.h  D3DUtil.cpp  D3DUtil.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h
Source/DirectX12/ModulePublic/: DXModule.h
Source/Main/: CMakeLists.txt  main.cpp
Source/Main/AngelScript/autowrapper/generator/: generateheader.cpp
Source/Main/AngelScript/include/: angelscript.h
Source/Main/AngelScript/source/: as_context.cpp
Source/Main/CPPFeature/: Feature.h
Source/Main/Test/: Test.cpp  Test.h
Source/Shaders/Chapter6/: color.hlsl
Source/Transfer/: CMakeLists.txt
Source/Transfer/src/: ChildObject.cpp  ChildObject.h  Module.h  TransferBase.cpp  TransferBase.h  TransferUtility.h
Source/Transfer/src/Objects/: BaseObject.cpp  BaseObject.h  ChildObject.cpp  ChildObject.h
